--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,9 +1,12 @@
 trigger:
 - main
-group:
-  vmImage:ubuntu-latest
+
+pool:
+  vmImage: 'ubuntu-latest'
+
 variables:
-  buildConfiguration:'Release'
+  buildConfiguration: 'Release'
+
 steps:
-- script:dotnet build --configuration $(buildConfiguration)
-  displayName:'dotnet build $(buildConfiguration)'
+- script: dotnet build --configuration $(buildConfiguration)
+  displayName: 'dotnet build $(buildConfiguration)'
